test/error/StThrowNoThrows.fu
public static class Test
{
	static void Foo()
	{
		throw Exception("foo"); //ERROR: Method must be marked 'throws Exception'
	}

	public static bool Run()
	{
		return true;
	}
}
